--- a/androShield/androShield/androShield.vcxproj
+++ b/androShield/androShield/androShield.vcxproj
@@ -121,14 +121,20 @@
     <ClCompile Include="ApkInfo.cpp" />
     <ClCompile Include="APKInfoExtractor.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="TaintAnalyser.cpp" />
     <ClCompile Include="XmlParser.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="APKInfoExtractor.h" />
+    <ClInclude Include="TaintAnalyser.h" />
+    <ClInclude Include="Vulnerability.h" />
     <ClInclude Include="XmlParser.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ApkInfo.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
